--- a/03. Numpy의 기본 사용법/03test.ipynb
+++ b/03. Numpy의 기본 사용법/03test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -14,7 +14,7 @@
      "name": "stdout",
      "text": [
       "3\n",
-      "int64\n",
+      "int32\n",
       "2\n"
      ],
      "output_type": "stream"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -73,7 +73,7 @@
    "source": [
     "# 0으로 초기화\n",
     "array2 = np.zeros((3,5), dtype=int)\n",
-    "print(array2)"
+    "print(array2)\n"
    ],
    "metadata": {
     "collapsed": false,
